// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests renders 1`] = `
<div
  aria-label="Countdown timer"
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <svg
    height={180}
    width={180}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
      fill="none"
      stroke="#d9d9d9"
      strokeWidth={12}
    />
    <path
      d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
      fill="none"
      stroke="rgba(0, 71, 119, 1)"
      strokeDasharray={527.7875658030853}
      strokeDashoffset={0}
      strokeLinecap="round"
      strokeWidth={12}
    />
  </svg>
</div>
`;

exports[`snapshot tests renders with different trail stroke width 1`] = `
<div
  aria-label="Countdown timer"
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <svg
    height={180}
    width={180}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m 90,8
          a 82,82 0 1,0 0,164
          a 82,82 0 1,0 0,-164"
      fill="none"
      stroke="#d9d9d9"
      strokeWidth={16}
    />
    <path
      d="m 90,8
          a 82,82 0 1,0 0,164
          a 82,82 0 1,0 0,-164"
      fill="none"
      stroke="rgba(0, 71, 119, 1)"
      strokeDasharray={515.221195188726}
      strokeDashoffset={0}
      strokeLinecap="round"
      strokeWidth={12}
    />
  </svg>
  <div
    aria-hidden="true"
    style={
      Object {
        "alignItems": "center",
        "color": "rgba(0, 71, 119, 1)",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    10
  </div>
</div>
`;

exports[`snapshot tests renders with time 1`] = `
<div
  aria-label="Countdown timer"
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <svg
    height={180}
    width={180}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
      fill="none"
      stroke="#d9d9d9"
      strokeWidth={12}
    />
    <path
      d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
      fill="none"
      stroke="rgba(0, 71, 119, 1)"
      strokeDasharray={527.7875658030853}
      strokeDashoffset={0}
      strokeLinecap="round"
      strokeWidth={12}
    />
  </svg>
  <div
    aria-hidden="true"
    style={
      Object {
        "alignItems": "center",
        "color": "rgba(0, 71, 119, 1)",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    10
  </div>
  <div
    aria-live="assertive"
    role="timer"
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
        "wordWrap": "normal",
      }
    }
  >
    10
  </div>
</div>
`;
